--- a/assetmanagment/src/components/Admin/AdminNav/adminnav.css
+++ b/assetmanagment/src/components/Admin/AdminNav/adminnav.css
@@ -252,7 +252,11 @@
   #nav-footer {
     position: relative;
     width: var(--navbar-width);
-    height: 54px;
+   padding-top: 10px;
+    height: 64px;
+    margin-bottom: 20px;
+    margin-left: 5px;
+    margin-right: 5px;
     background: var(--navbar-dark-secondary);
     border-radius: 16px;
     display: flex;
