--- a/assetmanagment/src/components/Admin/AssetRegistration/AssetRegister.css
+++ b/assetmanagment/src/components/Admin/AssetRegistration/AssetRegister.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: auto;
     background-color: #f9f9f9;
     font-family: Arial, sans-serif;
   }
