--- a/assetmanagment/src/components/Admin/AssetRegistration/AssetRegister.css
+++ b/assetmanagment/src/components/Admin/AssetRegistration/AssetRegister.css
@@ -48,7 +48,7 @@
   }
   
   .button {
-    padding: 10px 20px;
+    padding: 2px 20px;
     font-size: 16px;
     color: #ffffff;
     background-color: #007bff;
@@ -78,5 +78,15 @@
     margin: 10px 0;
     border: 1px solid #ccc;
     border-radius: 4px;
+  }
+  
+
+  .combined-qr-container {
+    display: inline-block;
+    text-align: center;
+    padding: 10px;
+    background: #feffff;
+    border: 4px solid #0b998d;
+    border-radius: 5px;
   }
   
