--- a/assetmanagment/src/components/Admin/AssetCategorization/assetCategorization.css
+++ b/assetmanagment/src/components/Admin/AssetCategorization/assetCategorization.css
@@ -22,7 +22,7 @@
     border-radius: 8px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     padding: 20px 30px;
-    width: 400px;
+    width: 500px;
     max-width: 90%;
   }
   
@@ -87,6 +87,22 @@
     font-size: 16px;
     color: #333;
     cursor: pointer;
+  }
+
+
+  .create-category-btn {
+    background-color: #0b8548;
+    color: white;
+    border: none;
+    
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
+    
+  }
+  
+  .create-category-btn:hover {
+    background-color: #0056b3;
   }
   
   /* Add responsive design */
