--- a/assetmanagment/src/components/Company/CompanyNav/companynav.css
+++ b/assetmanagment/src/components/Company/CompanyNav/companynav.css
@@ -1,4 +1,4 @@
-/*:root {
+:root {
     --background: white;
     --navbar-width: 200px;
     --navbar-width-min: 80px;
@@ -321,4 +321,4 @@
   #nav-footer-content::-webkit-scrollbar-thumb {
     border-radius: 99px;
     background-color: #D62929;
-  }*/
+  }
